1) début tentative stats descriptives -en 3 fenêtres temporeelles . 2) Transformation des indices en DateTime indexes pour faire les analyses temporelles (sur le notebook visualisation et pas celui de data). 3) correction des graphes montrant les tendances des variables (PIB, Working Hours)

--- a/Visualisation.ipynb
+++ b/Visualisation.ipynb
@@ -85,6 +85,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Visualisation et nettoyage des données manquantes <a class=\"anchor\" id=\"partie21\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Dans une volonté de rendre compte des valeurs manquantes à notre dataframe nous créons un dataframe qui comprend l'ensemble des valeurs manquantes "
    ]
   },
@@ -167,8 +174,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Correlations\n",
-    "Idée, nous allons étudier les correlations entre plusieurs variables de 4 pays (corrélations à l'intérieur du même pays)"
+    "### Statistiques descriptives intra-pays <a class=\"anchor\" id=\"partie22\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Résumé statistique des variables <a class=\"anchor\" id=\"partie221\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous allons tout d'abord effectuer des statistiques descriptives par pays des variables que nous avons collectées. Afin de mieux déterminer les effets de la politique monétaire et les chocs, nous avons privilégié une analyse centrée sur les périodes suivantes: \n",
+    "- Avant 2008 (1995-2007)\n",
+    "- Après 2008 (2008-2019)\n",
+    "- Post-COVID (2020-2024)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quelques lignes de code préliminaires"
    ]
   },
   {
@@ -180,9 +210,94 @@
     "#Fonction qui construit un vecteur contenant le nom des variables\n",
     "def variables_pays(pays):\n",
     "    variable_pays=[f'CPI_{pays}',f'PIB_{pays}',f'LT_IR_{pays}',f'ST_IR_{pays}',f'WH_{pays}',f'P_Growth_{pays}']\n",
-    "    return(variable_pays)\n",
+    "    return(variable_pays)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Conversion des index du dataframe en datetime\n",
+    "df.index = pd.PeriodIndex(df.index, freq='Q')  #conversion en PeriodIndex\n",
+    "df.index = df.index.to_timestamp() #Conversion en DateTime\n",
+    "print(type(df.index))\n",
     "\n",
+    "''' \n",
+    "Ici je ne suis pas sûr:\n",
+    "- pour faire des analyses en séries temporelles, il faut que les index soient des datetime\n",
+    "- j'ai donc converti chaque trimestre en la première date de chaque trimestre. \n",
+    "- pour des graphes, et pour transformer les sorties, on peut utiliser : df.index.strftime('%Y-Q%q')\n",
+    "- je ne sais pas s'il y a une meileure façon de faire\n",
     "\n",
+    "'''\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#On divise le df en 3 (correspondant à chaque période)\n",
+    "df_before_2008 = df.loc[df.index < '2008-01-01'].copy()\n",
+    "df_after_2008 = df.loc[(df.index >= '2008-01-01') & (df.index<'2020-01-01')].copy()\n",
+    "df_after_2020 = df.loc[df.index >= '2020-01-01'].copy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Synthèse avant 2008\n",
+    "df_before_2008.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Synthèse après 2008\n",
+    "df_after_2008.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Synthèse après 2020\n",
+    "df_after_2020.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Correlations\\\n",
+    "Idée: nous allons étudier les correlations entre plusieurs variables de 4 pays (corrélations à l'intérieur du même pays)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "France=variables_pays('France')\n",
     "Germany=variables_pays('Germany')\n",
     "Denmark=variables_pays('Denmark')\n",
@@ -207,6 +322,11 @@
     "plt.title(\"Matrice de corrélation des variables de la Roumanie\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -253,7 +373,8 @@
     "# Sélectionner un sous-ensemble des labels de l'axe X pour éviter la surcharge\n",
     "num_ticks = 8  # Nombre de labels affichés sur l'axe X\n",
     "indices = np.linspace(0, len(df.index) - 1, num_ticks, dtype=int)  # Espacement des indices\n",
-    "plt.xticks(df.index[indices], rotation=45)  # Appliquer les labels espacés\n",
+    "plt.xticks(df.index[indices],df.index[indices].to_period('Q').strftime('%Y-Q%q'),rotation=45)  # Appliquer les labels espacés\n",
+    "\n",
     "plt.grid(True)\n",
     "plt.show()"
    ]
@@ -289,7 +410,7 @@
     "# Indicage\n",
     "num_ticks = 8 \n",
     "indices = np.linspace(0, len(df_selected.index) - 1, num_ticks, dtype=int)  \n",
-    "plt.xticks(df_selected.index[indices], rotation=45) \n",
+    "plt.xticks(df_selected.index[indices],df.index[indices].to_period('Q').strftime('%Y-Q%q'), rotation=45) \n",
     "\n",
     "# Affichage \n",
     "plt.legend(loc=\"upper left\", bbox_to_anchor=(1, 1), ncol=2)  # Légende en dehors du graphique\n",
@@ -320,7 +441,7 @@
    "source": [
     "plt.figure(figsize=(14, 6))  # Taille du graphique\n",
     "\n",
-    "plt.plot(df.index, df_plot['WH_France'], marker='o', linestyle='-')\n",
+    "plt.plot(df.index, df['WH_France'], marker='o', linestyle='-')\n",
     "\n",
     "plt.xlabel(\"Période\")\n",
     "plt.ylabel(\"Heures travaillées en France\")\n",
