petit ajout modèle

--- a/modèle/modèle US.ipynb
+++ b/modèle/modèle US.ipynb
@@ -1101,7 +1101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# merger les données des pays avec les chocs"
+    "# merger les données des pays avec les chocs\n",
+    "# Il faudrait mettre les données en format long pour faire le modèle (1 colonne pays, 1 colonne time et 1 colonne par variable)"
    ]
   },
   {
