transformation des données en format long pour implémenter le modèle

--- a/modèle/modèle US.ipynb
+++ b/modèle/modèle US.ipynb
@@ -1107,412 +1107,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>CPI_Austria</th>\n",
-       "      <th>PIB_Austria</th>\n",
-       "      <th>LT_IR_Austria</th>\n",
-       "      <th>ST_IR_Austria</th>\n",
-       "      <th>WH_Austria</th>\n",
-       "      <th>P_Growth_Austria</th>\n",
-       "      <th>CPI_Belgium</th>\n",
-       "      <th>PIB_Belgium</th>\n",
-       "      <th>LT_IR_Belgium</th>\n",
-       "      <th>...</th>\n",
-       "      <th>LT_IR_Switzerland</th>\n",
-       "      <th>ST_IR_Switzerland</th>\n",
-       "      <th>WH_Switzerland</th>\n",
-       "      <th>P_Growth_Switzerland</th>\n",
-       "      <th>CPI_United_Kingdom</th>\n",
-       "      <th>PIB_United_Kingdom</th>\n",
-       "      <th>LT_IR_United_Kingdom</th>\n",
-       "      <th>ST_IR_United_Kingdom</th>\n",
-       "      <th>WH_United_Kingdom</th>\n",
-       "      <th>P_Growth_United_Kingdom</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1995-Q1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>43186.6</td>\n",
-       "      <td>7.627367</td>\n",
-       "      <td>5.043334</td>\n",
-       "      <td>40.00</td>\n",
-       "      <td>0.590232</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>53331.5</td>\n",
-       "      <td>8.293333</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5.275333</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.213238</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>257589.8</td>\n",
-       "      <td>8.661467</td>\n",
-       "      <td>6.722410</td>\n",
-       "      <td>36.90</td>\n",
-       "      <td>0.676162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1995-Q2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>46786.8</td>\n",
-       "      <td>7.184033</td>\n",
-       "      <td>4.680000</td>\n",
-       "      <td>39.95</td>\n",
-       "      <td>0.590232</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>56119.3</td>\n",
-       "      <td>7.590000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.947333</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.213238</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>248722.5</td>\n",
-       "      <td>8.242567</td>\n",
-       "      <td>6.742444</td>\n",
-       "      <td>36.85</td>\n",
-       "      <td>0.676162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1995-Q3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>46335.5</td>\n",
-       "      <td>6.997967</td>\n",
-       "      <td>4.373333</td>\n",
-       "      <td>39.90</td>\n",
-       "      <td>0.590232</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>53741.7</td>\n",
-       "      <td>7.186666</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.714667</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.213238</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>255889.4</td>\n",
-       "      <td>8.108933</td>\n",
-       "      <td>6.849310</td>\n",
-       "      <td>36.80</td>\n",
-       "      <td>0.676162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1995-Q4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>47362.4</td>\n",
-       "      <td>6.730933</td>\n",
-       "      <td>4.176667</td>\n",
-       "      <td>39.85</td>\n",
-       "      <td>0.590232</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>57115.3</td>\n",
-       "      <td>6.853333</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.175667</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.213238</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>263308.8</td>\n",
-       "      <td>7.788167</td>\n",
-       "      <td>6.696187</td>\n",
-       "      <td>36.75</td>\n",
-       "      <td>0.676162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1996-Q1</td>\n",
-       "      <td>71.553333</td>\n",
-       "      <td>44641.2</td>\n",
-       "      <td>6.396633</td>\n",
-       "      <td>3.476667</td>\n",
-       "      <td>39.80</td>\n",
-       "      <td>0.614910</td>\n",
-       "      <td>70.003333</td>\n",
-       "      <td>54240.0</td>\n",
-       "      <td>6.640000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.400333</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>0.312233</td>\n",
-       "      <td>68.1</td>\n",
-       "      <td>262343.7</td>\n",
-       "      <td>7.753200</td>\n",
-       "      <td>6.277534</td>\n",
-       "      <td>36.70</td>\n",
-       "      <td>0.768325</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>2023-Q4</td>\n",
-       "      <td>132.593333</td>\n",
-       "      <td>122280.3</td>\n",
-       "      <td>3.125533</td>\n",
-       "      <td>3.957456</td>\n",
-       "      <td>32.90</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>127.550000</td>\n",
-       "      <td>158085.7</td>\n",
-       "      <td>3.150000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.841333</td>\n",
-       "      <td>1.718106</td>\n",
-       "      <td>36.3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.234600</td>\n",
-       "      <td>5.326667</td>\n",
-       "      <td>35.70</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>2024-Q1</td>\n",
-       "      <td>133.326667</td>\n",
-       "      <td>117304.1</td>\n",
-       "      <td>2.835333</td>\n",
-       "      <td>3.923615</td>\n",
-       "      <td>34.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>129.700000</td>\n",
-       "      <td>147812.8</td>\n",
-       "      <td>2.890000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.765667</td>\n",
-       "      <td>1.628413</td>\n",
-       "      <td>35.7</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.029300</td>\n",
-       "      <td>5.203333</td>\n",
-       "      <td>35.70</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>2024-Q2</td>\n",
-       "      <td>134.366667</td>\n",
-       "      <td>120746.2</td>\n",
-       "      <td>3.013533</td>\n",
-       "      <td>3.808172</td>\n",
-       "      <td>32.90</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>131.086667</td>\n",
-       "      <td>154840.7</td>\n",
-       "      <td>3.063333</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.722333</td>\n",
-       "      <td>1.475667</td>\n",
-       "      <td>35.9</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.201500</td>\n",
-       "      <td>5.166667</td>\n",
-       "      <td>35.70</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>118</th>\n",
-       "      <td>2024-Q3</td>\n",
-       "      <td>133.950000</td>\n",
-       "      <td>118315.9</td>\n",
-       "      <td>2.809900</td>\n",
-       "      <td>3.555377</td>\n",
-       "      <td>34.50</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>131.900000</td>\n",
-       "      <td>147978.8</td>\n",
-       "      <td>2.893333</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.437000</td>\n",
-       "      <td>1.094031</td>\n",
-       "      <td>36.4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.996100</td>\n",
-       "      <td>4.946667</td>\n",
-       "      <td>35.70</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119</th>\n",
-       "      <td>2024-Q4</td>\n",
-       "      <td>135.183333</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.712067</td>\n",
-       "      <td>2.996487</td>\n",
-       "      <td>33.90</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>133.383333</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.853333</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.352333</td>\n",
-       "      <td>0.767250</td>\n",
-       "      <td>36.2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.348567</td>\n",
-       "      <td>4.690000</td>\n",
-       "      <td>35.70</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>120 rows × 169 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Unnamed: 0  CPI_Austria  PIB_Austria  LT_IR_Austria  ST_IR_Austria  \\\n",
-       "0      1995-Q1          NaN      43186.6       7.627367       5.043334   \n",
-       "1      1995-Q2          NaN      46786.8       7.184033       4.680000   \n",
-       "2      1995-Q3          NaN      46335.5       6.997967       4.373333   \n",
-       "3      1995-Q4          NaN      47362.4       6.730933       4.176667   \n",
-       "4      1996-Q1    71.553333      44641.2       6.396633       3.476667   \n",
-       "..         ...          ...          ...            ...            ...   \n",
-       "115    2023-Q4   132.593333     122280.3       3.125533       3.957456   \n",
-       "116    2024-Q1   133.326667     117304.1       2.835333       3.923615   \n",
-       "117    2024-Q2   134.366667     120746.2       3.013533       3.808172   \n",
-       "118    2024-Q3   133.950000     118315.9       2.809900       3.555377   \n",
-       "119    2024-Q4   135.183333          NaN       2.712067       2.996487   \n",
-       "\n",
-       "     WH_Austria  P_Growth_Austria  CPI_Belgium  PIB_Belgium  LT_IR_Belgium  \\\n",
-       "0         40.00          0.590232          NaN      53331.5       8.293333   \n",
-       "1         39.95          0.590232          NaN      56119.3       7.590000   \n",
-       "2         39.90          0.590232          NaN      53741.7       7.186666   \n",
-       "3         39.85          0.590232          NaN      57115.3       6.853333   \n",
-       "4         39.80          0.614910    70.003333      54240.0       6.640000   \n",
-       "..          ...               ...          ...          ...            ...   \n",
-       "115       32.90               NaN   127.550000     158085.7       3.150000   \n",
-       "116       34.00               NaN   129.700000     147812.8       2.890000   \n",
-       "117       32.90               NaN   131.086667     154840.7       3.063333   \n",
-       "118       34.50               NaN   131.900000     147978.8       2.893333   \n",
-       "119       33.90               NaN   133.383333          NaN       2.853333   \n",
-       "\n",
-       "     ...  LT_IR_Switzerland  ST_IR_Switzerland  WH_Switzerland  \\\n",
-       "0    ...           5.275333                NaN             NaN   \n",
-       "1    ...           4.947333                NaN             NaN   \n",
-       "2    ...           4.714667                NaN             NaN   \n",
-       "3    ...           4.175667                NaN             NaN   \n",
-       "4    ...           4.400333                NaN            37.0   \n",
-       "..   ...                ...                ...             ...   \n",
-       "115  ...           0.841333           1.718106            36.3   \n",
-       "116  ...           0.765667           1.628413            35.7   \n",
-       "117  ...           0.722333           1.475667            35.9   \n",
-       "118  ...           0.437000           1.094031            36.4   \n",
-       "119  ...           0.352333           0.767250            36.2   \n",
-       "\n",
-       "     P_Growth_Switzerland  CPI_United_Kingdom  PIB_United_Kingdom  \\\n",
-       "0                0.213238                 NaN            257589.8   \n",
-       "1                0.213238                 NaN            248722.5   \n",
-       "2                0.213238                 NaN            255889.4   \n",
-       "3                0.213238                 NaN            263308.8   \n",
-       "4                0.312233                68.1            262343.7   \n",
-       "..                    ...                 ...                 ...   \n",
-       "115                   NaN                 NaN                 NaN   \n",
-       "116                   NaN                 NaN                 NaN   \n",
-       "117                   NaN                 NaN                 NaN   \n",
-       "118                   NaN                 NaN                 NaN   \n",
-       "119                   NaN                 NaN                 NaN   \n",
-       "\n",
-       "     LT_IR_United_Kingdom  ST_IR_United_Kingdom  WH_United_Kingdom  \\\n",
-       "0                8.661467              6.722410              36.90   \n",
-       "1                8.242567              6.742444              36.85   \n",
-       "2                8.108933              6.849310              36.80   \n",
-       "3                7.788167              6.696187              36.75   \n",
-       "4                7.753200              6.277534              36.70   \n",
-       "..                    ...                   ...                ...   \n",
-       "115              4.234600              5.326667              35.70   \n",
-       "116              4.029300              5.203333              35.70   \n",
-       "117              4.201500              5.166667              35.70   \n",
-       "118              3.996100              4.946667              35.70   \n",
-       "119              4.348567              4.690000              35.70   \n",
-       "\n",
-       "     P_Growth_United_Kingdom  \n",
-       "0                   0.676162  \n",
-       "1                   0.676162  \n",
-       "2                   0.676162  \n",
-       "3                   0.676162  \n",
-       "4                   0.768325  \n",
-       "..                       ...  \n",
-       "115                      NaN  \n",
-       "116                      NaN  \n",
-       "117                      NaN  \n",
-       "118                      NaN  \n",
-       "119                      NaN  \n",
-       "\n",
-       "[120 rows x 169 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data"
+    "\n",
+    "# Renommer la colonne temps\n",
+    "data = data.rename(columns={\"Unnamed: 0\": \"Time\"})\n",
+    "\n",
+    "# Conversion en format long\n",
+    "df_long = data.melt(id_vars=[\"Time\"], var_name=\"Variable_Country\", value_name=\"Value\")\n",
+    "# Séparer le pays et la variable\n",
+    "df_long[['Variable', 'Country']] = df_long['Variable_Country'].str.rsplit('_', n=1, expand=True)\n",
+    "\n",
+    "# Réorganiser les colonnes et supprimer la colonne d'origine\n",
+    "df_long = df_long[[\"Time\", \"Country\", \"Variable\", \"Value\"]]\n",
+    "\n",
+    "# Afficher les premières lignes du format long\n",
+    "df_long\n",
+    "\n",
+    "data = df_long\n"
    ]
   }
  ],
