--- a/Visualisation.ipynb
+++ b/Visualisation.ipynb
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualisation et nettoyage des données manquantes <a class=\"anchor\" id=\"partie21\"></a>"
+    "### Visualisation des données manquantes <a class=\"anchor\" id=\"partie21\"></a>"
    ]
   },
   {
@@ -194,31 +194,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Statistiques descriptives intra-pays <a class=\"anchor\" id=\"partie22\"></a>"
+    "### Nettoyage des données manquantes <a class=\"anchor\" id=\"partie21\"></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Résumé statistique des variables <a class=\"anchor\" id=\"partie221\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Nous allons tout d'abord effectuer des statistiques descriptives par pays des variables que nous avons collectées. Afin de mieux déterminer les effets de la politique monétaire et les chocs, nous avons privilégié une analyse centrée sur les périodes suivantes: \n",
-    "- Avant 2008 (1995-2007)\n",
-    "- Après 2008 (2008-2019)\n",
-    "- Post-COVID (2020-2024)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Quelques lignes de code préliminaires"
+    "Ce qui suit est une proposition"
    ]
   },
   {
@@ -231,6 +214,86 @@
     "def variables_pays(pays):\n",
     "    variable_pays=[f'CPI_{pays}',f'PIB_{pays}',f'LT_IR_{pays}',f'ST_IR_{pays}',f'WH_{pays}',f'P_Growth_{pays}']\n",
     "    return(variable_pays)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#On élimine l'année 1995 pour éviter de faire du \"backcasting\" du CPI de tous les pays\n",
+    "df_clean=df.copy()\n",
+    "df_clean=df_clean.drop([\"1995-Q1\",\"1995-Q2\",\"1995-Q3\",\"1995-Q4\"])\n",
+    "\n",
+    "#On élimine l'Estonie de notre dataset\n",
+    "Estonia=variables_pays(\"Estonia\")\n",
+    "df_clean=df_clean.drop(Estonia, axis=1)\n",
+    "df_clean\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Les données de l'OCDE pour le CPI de la Suisse (méthodologie proche à celle d'Eurostat)\n",
+    "cpi_suisse = pd.read_csv(r\"Données_extraites\\CPI_Suisse_OCDE.csv\")\n",
+    "cpi_suisse = cpi_suisse.pivot_table(index='TIME_PERIOD', columns='Reference area', values='OBS_VALUE')\n",
+    "cpi_suisse = cpi_suisse.drop(cpi_suisse.index[:4])\n",
+    "\n",
+    "\n",
+    "#On recopie ces données dans df_clean\n",
+    "df_clean['CPI_Switzerland']= cpi_suisse['Switzerland'].values\n",
+    "df_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean_missing_binary = df_clean.isnull().astype(int)\n",
+    "\n",
+    "# Définir la figure avec un affichage interactif\n",
+    "fig, ax = plt.subplots(figsize=(50, 80))\n",
+    "\n",
+    "# Utiliser seaborn pour une meilleure visualisation sans grille\n",
+    "sns.heatmap(df_clean_missing_binary, cmap=\"OrRd\", cbar=False, linewidths=0, ax=ax, square=False)\n",
+    "\n",
+    "# Ajouter un titre\n",
+    "ax.set_title(\"Matrice des valeurs manquantes (Rouge = Manquant)\")\n",
+    "\n",
+    "# Rotation des labels pour une meilleure lisibilité\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.yticks(rotation=0)\n",
+    "\n",
+    "# Afficher la figure\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Pourcentage de données manquantes par variable\n",
+    "percentage_missing_clean=((df_clean_missing_binary.sum())/df_clean_missing_binary.shape[0])*100\n",
+    "\n",
+    "#On ne garde que les colonnes ayant des missing values\n",
+    "percentage_missing_clean=percentage_missing_clean[percentage_missing_clean>0]\n",
+    "percentage_missing_clean = percentage_missing_clean.sort_values(ascending=False)\n",
+    "percentage_missing_clean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quelques lignes de code préliminaires"
    ]
   },
   {
@@ -909,7 +972,6 @@
     "selected_countries = ['Austria', 'France', 'United_Kingdom','Spain', 'Italy', 'Netherlands', 'Switzerland'] #Ici pon peut choisir les pays que l'on veut\n",
     "df_selected = df.loc[:,[f'PIB_{pays}' for pays in selected_countries]]\n",
     "\n",
-    "def PIB_Groupes(group)\n",
     "colors = plt.cm.get_cmap(\"tab10\", len(df_selected.columns))  # Utilisation d'une palette de couleurs\n",
     "plt.figure(figsize=(14, 6))\n",
     "\n",
@@ -1310,7 +1372,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1324,7 +1386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
