--- a/Visualisation.ipynb
+++ b/Visualisation.ipynb
@@ -49,9 +49,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /usr/local/lib/python3.12/site-packages (from -r requirements.txt (line 1)) (2.2.3)\n",
+      "Requirement already satisfied: numpy in /usr/local/lib/python3.12/site-packages (from -r requirements.txt (line 2)) (2.2.5)\n",
+      "Collecting openpyxl (from -r requirements.txt (line 3))\n",
+      "  Downloading openpyxl-3.1.5-py2.py3-none-any.whl.metadata (2.5 kB)\n",
+      "Requirement already satisfied: statsmodels in /usr/local/lib/python3.12/site-packages (from -r requirements.txt (line 4)) (0.14.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2025.2)\n",
+      "Collecting et-xmlfile (from openpyxl->-r requirements.txt (line 3))\n",
+      "  Downloading et_xmlfile-2.0.0-py3-none-any.whl.metadata (2.7 kB)\n",
+      "Requirement already satisfied: scipy!=1.9.2,>=1.8 in /usr/local/lib/python3.12/site-packages (from statsmodels->-r requirements.txt (line 4)) (1.15.2)\n",
+      "Requirement already satisfied: patsy>=0.5.6 in /usr/local/lib/python3.12/site-packages (from statsmodels->-r requirements.txt (line 4)) (1.0.1)\n",
+      "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.12/site-packages (from statsmodels->-r requirements.txt (line 4)) (24.2)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas->-r requirements.txt (line 1)) (1.17.0)\n",
+      "Downloading openpyxl-3.1.5-py2.py3-none-any.whl (250 kB)\n",
+      "Downloading et_xmlfile-2.0.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: et-xmlfile, openpyxl\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [openpyxl]1/2\u001b[0m [openpyxl]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed et-xmlfile-2.0.0 openpyxl-3.1.5\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install -r requirements.txt"
    ]
@@ -1386,7 +1412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
