test stationnarité chocs et modèle sur croissance du PIB

--- a/modèle/regression_results_2_lags_v2.tex
+++ b/modèle/regression_results_2_lags_v2.tex
@@ -2,7 +2,7 @@
 \toprule
 \textbf{R-squared} & \textbf{Adj. R-squared} & \textbf{F-statistic} & \textbf{Prob (F-statistic)} & \textbf{Observations} \\
 \midrule
-0.982600 & 0.980900 & 570.655800 & 0.000000 & 101.000000 \\
+0.985300 & 0.983600 & 565.723400 & 0.000000 & 86.000000 \\
 \bottomrule
 \end{tabular}
 
@@ -10,15 +10,15 @@
 \toprule
  & \textbf{Coefficient} & \textbf{Std. Error} & \textbf{t-Statistic} & \textbf{P-Value} \\
 \midrule
-const & 7.1924 & 7.835909 & 0.917872 & 0.361112 \\
-Policy rate_lag1 & 1.6279*** & 0.071245 & 22.849142 & 0.000000 \\
-Policy rate_lag2 & -0.702*** & 0.071683 & -9.793522 & 0.000000 \\
-inflation & 0.0847** & 0.038777 & 2.183274 & 0.031589 \\
-inflation_lag1 & -0.1194** & 0.058217 & -2.051336 & 0.043109 \\
-inflation_lag2 & 0.1076*** & 0.039329 & 2.736307 & 0.007471 \\
-GDPC1_log & 8.5211*** & 2.554761 & 3.335370 & 0.001234 \\
-GDPC1_lag1_log & -9.3374*** & 3.116377 & -2.996248 & 0.003522 \\
-GDPC1_lag2_log & 0.0633 & 2.554320 & 0.024787 & 0.980279 \\
-time_squared & 0.0 & 0.000033 & 0.494845 & 0.621902 \\
+const & 5.0321 & 8.065379 & 0.623908 & 0.534556 \\
+Policy rate_lag1 & 1.6402*** & 0.079063 & 20.746227 & 0.000000 \\
+Policy rate_lag2 & -0.713*** & 0.078776 & -9.051060 & 0.000000 \\
+inflation & 0.0624 & 0.054059 & 1.154657 & 0.251849 \\
+inflation_lag1 & -0.0028 & 0.083256 & -0.033471 & 0.973387 \\
+inflation_lag2 & 0.0188 & 0.053727 & 0.350504 & 0.726930 \\
+GDPC1_log & 8.4541 & 6.342994 & 1.332820 & 0.186573 \\
+GDPC1_lag1_log & -1.6614 & 8.388953 & -0.198040 & 0.843542 \\
+GDPC1_lag2_log & -7.3281 & 6.414699 & -1.142388 & 0.256879 \\
+time_squared & 0.0 & 0.000035 & 0.341039 & 0.734015 \\
 \bottomrule
 \end{tabular}
