IRF de l'inflation des US

--- a/modèle/regression_results_1_lags.tex
+++ b/modèle/regression_results_1_lags.tex
@@ -2,7 +2,7 @@
 \toprule
 \textbf{R-squared} & \textbf{Adj. R-squared} & \textbf{F-statistic} & \textbf{Prob (F-statistic)} & \textbf{Observations} \\
 \midrule
-0.971900 & 0.969000 & 332.902700 & 0.000000 & 86.000000 \\
+0.968600 & 0.965900 & 354.533100 & 0.000000 & 101.000000 \\
 \bottomrule
 \end{tabular}
 
@@ -10,14 +10,14 @@
 \toprule
  & \textbf{Coefficient} & \textbf{Std. Error} & \textbf{t-Statistic} & \textbf{P-Value} \\
 \midrule
-const & 2.0766 & 11.045045 & 0.188016 & 0.851358 \\
-Policy rate_lag1 & 0.9291*** & 0.024133 & 38.496851 & 0.000000 \\
-inflation & 0.0207 & 0.069751 & 0.297402 & 0.766960 \\
-inflation_lag1 & 0.1092 & 0.070326 & 1.552105 & 0.124738 \\
-GDPC1_log & 17.8279** & 8.661153 & 2.058371 & 0.042938 \\
-GDPC1_lag1_log & -18.0166** & 8.416359 & -2.140660 & 0.035466 \\
-spread corporate & -0.3083 & 0.190469 & -1.618827 & 0.109574 \\
-spread corporate_lag1 & -0.1005 & 0.208282 & -0.482703 & 0.630676 \\
-time_squared & 0.0 & 0.000048 & 0.454709 & 0.650598 \\
+const & -10.1491 & 10.440613 & -0.972077 & 0.333561 \\
+Policy rate_lag1 & 0.9538*** & 0.023558 & 40.488398 & 0.000000 \\
+inflation & -0.0374 & 0.050917 & -0.734443 & 0.464547 \\
+inflation_lag1 & 0.1503*** & 0.053274 & 2.822012 & 0.005848 \\
+GDPC1_log & 8.3447** & 3.387301 & 2.463510 & 0.015618 \\
+GDPC1_lag1_log & -7.2849** & 3.309757 & -2.201029 & 0.030236 \\
+spread corporate & -0.4856*** & 0.110064 & -4.411884 & 0.000028 \\
+spread corporate_lag1 & 0.312*** & 0.105432 & 2.959255 & 0.003921 \\
+time_squared & -0.0 & 0.000044 & -0.855925 & 0.394263 \\
 \bottomrule
 \end{tabular}
