--- a/modèle/regression_results_2_lags_v3.tex
+++ b/modèle/regression_results_2_lags_v3.tex
@@ -2,7 +2,7 @@
 \toprule
 \textbf{R-squared} & \textbf{Adj. R-squared} & \textbf{F-statistic} & \textbf{Prob (F-statistic)} & \textbf{Observations} \\
 \midrule
-0.983100 & 0.981100 & 492.048000 & 0.000000 & 86.000000 \\
+0.982700 & 0.981000 & 575.981300 & 0.000000 & 101.000000 \\
 \bottomrule
 \end{tabular}
 
@@ -10,15 +10,15 @@
 \toprule
  & \textbf{Coefficient} & \textbf{Std. Error} & \textbf{t-Statistic} & \textbf{P-Value} \\
 \midrule
-const & 11.4681 & 9.073555 & 1.263899 & 0.210129 \\
-Policy rate_lag1 & 1.7016*** & 0.082577 & 20.606402 & 0.000000 \\
-Policy rate_lag2 & -0.7638*** & 0.083735 & -9.122082 & 0.000000 \\
-GDPC1_log & 1.039 & 7.087765 & 0.146588 & 0.883845 \\
-GDPC1_lag1_log & -1.8127 & 8.969456 & -0.202098 & 0.840380 \\
-GDPC1_lag2_log & -0.3883 & 7.175960 & -0.054108 & 0.956991 \\
-spread corporate & 0.0183 & 0.158094 & 0.115769 & 0.908141 \\
-spread corporate_lag1 & -0.07 & 0.245120 & -0.285738 & 0.775856 \\
-spread corporate_lag2 & -0.0823 & 0.173488 & -0.474408 & 0.636569 \\
-time_squared & 0.0 & 0.000038 & 1.182000 & 0.240891 \\
+const & 3.2696 & 7.899172 & 0.413918 & 0.679908 \\
+Policy rate_lag1 & 1.6948*** & 0.070636 & 23.994202 & 0.000000 \\
+Policy rate_lag2 & -0.7444*** & 0.072572 & -10.257071 & 0.000000 \\
+GDPC1_log & 7.8384*** & 2.587992 & 3.028769 & 0.003195 \\
+GDPC1_lag1_log & -8.3379*** & 3.074354 & -2.712095 & 0.007994 \\
+GDPC1_lag2_log & 0.1741 & 2.586071 & 0.067310 & 0.946483 \\
+spread corporate & -0.2897*** & 0.082342 & -3.518416 & 0.000680 \\
+spread corporate_lag1 & 0.4666*** & 0.123429 & 3.780506 & 0.000279 \\
+spread corporate_lag2 & -0.2308*** & 0.080541 & -2.865183 & 0.005175 \\
+time_squared & 0.0 & 0.000033 & 0.304057 & 0.761778 \\
 \bottomrule
 \end{tabular}
